bad/assign_arr_elem_bool_string.example_compiler_output
ERROR
[1mbad/assign_arr_elem_bool_string.lat:4:22: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	(new boolean[3])[1] = "";
	                    [1;32m^[m
